--- a/BHSCMSApp/BHSCMSApp/Site.Master
+++ b/BHSCMSApp/BHSCMSApp/Site.Master
@@ -64,7 +64,7 @@
             /*display:inline;*/
             border:2px #CCC solid;
             border-radius:2px;
-            width:75%;
+            /*width:75%;*/
             /*padding:7px;*/
             /*margin:1px;*/
             }
