--- a/BHSCMSApp/BHSCMSApp/Site.Master
+++ b/BHSCMSApp/BHSCMSApp/Site.Master
@@ -70,7 +70,7 @@
             }
 
 
-.css-ds {
+/*.css-ds {
   border-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="10" viewBox="0 0 2 1"><polygon fill="#FFFFFF" points="1,1 0,0 2,0"/></svg>') 0 0 100% repeat;
   border-width: 0 0 10px;
   border-style: solid;
@@ -79,7 +79,7 @@
   position: relative;
   z-index: 1;
   -webkit-filter: drop-shadow(hsla(0, 0%, 0%, 0.55) 0px 1px 2px);
-}
+}*/
 
     </style>
 
@@ -214,7 +214,7 @@
          
     </form>
       </div> 
-    <div class="svg-bi css-ds"></div>
+    <%--<div class="svg-bi css-ds"></div>--%>
      <div id="footer" class="panel-footer">
                 <div class=".panel-group">
             <br />
