--- a/BHSCMSApp/BHSCMSApp/Dashboard/DashboardVendor.Master
+++ b/BHSCMSApp/BHSCMSApp/Dashboard/DashboardVendor.Master
@@ -89,7 +89,7 @@
                     <li><a href='/Dashboard/VendorRFI/VendorRFIList'><span>RFI</span></a></li>
                     <li><a href='#'><span>RFP</span></a></li>
                     <li><a href='#'><span>Contracts</span></a></li>
-                     <li><a href='#'><span>Request</span></a></li>
+                     <li><a href='/Dashboard/Request/VendorRequest'><span>Request</span></a></li>
                     <%--<li><a href="/Dashboard/Account/VendorProfile.aspx"><span>User Account</span></a></li>        --%>        
                 </ul>
                 </div>
