--- a/BHSCMSApp/BHSCMSApp/Content/menubar.css
+++ b/BHSCMSApp/BHSCMSApp/Content/menubar.css
@@ -8,6 +8,7 @@
   display: block;
   position: relative;
   font-family: 'PT Sans', sans-serif;
+  z-index:auto;
 }
 #cssmenu ul {
   list-style: none;
@@ -165,7 +166,7 @@
   width: 100%;
   height: 0;
   top: 0;
-  z-index: 0;
+  z-index: auto;
   background: #D4E58B;
   -webkit-transition: height .2s;
   -moz-transition: height .2s;
@@ -333,8 +334,9 @@
   #cssmenu ul li ul li,
   #cssmenu ul li:hover > ul > li {
     max-height: 999px;
-    position: relative;
+    position: absolute;
     background: none;
+    z-index:9000;
   }
   #cssmenu ul li ul li a {
     padding: 8px 20px 8px 35px;
